use AndroidVideoCache for caching video

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -11,6 +11,17 @@
 // WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 // See the License for the specific language governing permissions and
 // limitations under the License.
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+}
+
+repositories {
+    maven { url 'https://dl.bintray.com/alexeydanilov/maven' }
+}
+
 apply plugin: 'com.android.application'
 
 android {
@@ -35,4 +46,5 @@ android {
 
 dependencies {
     compile project(':library')
+    compile 'com.danikula:videocache:2.0.7'
 }
