--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
   <application
       android:label="@string/application_name"
+      android:name=".App"
       android:icon="@drawable/ic_launcher"
       android:largeHeap="true"
       android:allowBackup="false">
